[package]
name = "dumper-rs"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {git = "https://github.com/not-matthias/cheat-utils"}
pelite = "0.8.1"
winapi = { version = "0.3.8", features = ["winnt", "fileapi", "memoryapi", "errhandlingapi"] }
ntapi = "0.3.3"
memoffset = "0.5.4"
